# Gargantua-Reimagined

./: .gitignore  Cargo.toml  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml  shader_validate.yml
benches/: geodesic_rk4.rs  ray_march.rs
crates/gargantua-app/: Cargo.toml
crates/gargantua-app/src/: errors.rs  lib.rs  main.rs
crates/gargantua-app/src/plugin/: mod.rs  registry.rs  scripting.rs
crates/gargantua-app/src/state/: event_bus.rs  mod.rs  sim_state.rs  undo.rs  url_serde.rs
crates/gargantua-app/src/systems/: input.rs  mod.rs  physics_sync.rs  replay.rs
crates/gargantua-app/tests/: undo_redo.rs  url_serde.rs
crates/gargantua-bake/: Cargo.toml
crates/gargantua-bake/src/: cache.rs  errors.rs  lib.rs  scheduler.rs
crates/gargantua-bake/src/geodesic/: bake.wgsl  let_baker.rs  mod.rs
crates/gargantua-bake/src/irradiance/: mod.rs  sh_coeffs.rs  starmap.rs
crates/gargantua-bake/src/noise/: bake.wgsl  blue_noise.rs  curl_noise.rs  mod.rs
crates/gargantua-bake/src/spectrum/: blackbody.rs  cie_cmf.rs  doppler_lut.rs  mod.rs
crates/gargantua-bake/tests/: cache.rs  lut_baker.rs
crates/gargantua-camera/: Cargo.toml
crates/gargantua-camera/src/: errors.rs  lib.rs  (+1 more)
crates/gargantua-core/: Cargo.toml
crates/gargantua-core/src/: app.rs  clock.rs  errors.rs  lib.rs
crates/gargantua-core/src/frame/: barrier.rs  frame_graph.rs  mod.rs  pass.rs  resource.rs
crates/gargantua-core/src/gpu/: context.rs  limits.rs  mod.rs  profiler.rs  surface.rs
crates/gargantua-core/src/logging/: mod.rs  wasm.rs
crates/gargantua-core/src/platform/: mod.rs
crates/gargantua-core/src/platform/macos/: mod.rs
crates/gargantua-core/src/platform/macos/compute/: mod.rs  neural_engine.rs  simd_group.rs  threadgroup.rs
crates/gargantua-core/src/platform/macos/gpu/: adapter_metal.rs  chip_detect.rs  gpu_cores.rs  memory_pressure.rs  mod.rs
crates/gargantua-core/src/platform/macos/hdr/: display_p3.rs  edr.rs  mod.rs  pro_display_xdr.rs
crates/gargantua-core/src/platform/macos/memory/: mod.rs  pressure_response.rs  unified_allocator.rs  zero_copy_readback.rs
crates/gargantua-core/src/platform/macos/quality/: m1_max_tier.rs  m1_pro_tier.rs  m1_tier.rs  m2_series.rs  m3_series.rs  m4_series.rs  m5_series.rs  mod.rs
crates/gargantua-core/src/platform/windows/: mod.rs
crates/gargantua-core/src/platform/windows/compute/: shared_mem.rs  workgroup.rs
crates/gargantua-core/src/platform/windows/gpu/: adapter_dx12.rs  adapter_vulkan.rs  vendor.rs
crates/gargantua-core/src/platform/windows/hdr/: display_detect.rs  dolby_vision.rs  hdr10.rs
crates/gargantua-core/src/platform/windows/memory/: read_heap.rs  staging_pool.rs  upload_heap.rs  vram_budget.rs
crates/gargantua-core/src/platform/windows/quality/: amd_presets.rs  intel_presets.rs  nvidia_presets.rs
crates/gargantua-core/src/platform/windows/video/: nvenc.rs  qsv.rs  software.rs
crates/gargantua-core/src/quality/: adaptive.rs  detector.rs  mod.rs  preset.rs
crates/gargantua-physics/: Cargo.toml
crates/gargantua-render/: Cargo.toml
crates/gargantua-render/src/: errors.rs  hdr.rs  lib.rs  shader_reload.rs
crates/gargantua-render/src/bindgroups/: physics.rs  scene.rs  textures.rs
crates/gargantua-render/src/pipelines/: accretion.rs  accumulate.rs  geodesic_gpu.rs  lensing.rs  ray_march.rs  starfield.rs
crates/gargantua-render/src/postfx/: bloom.rs  chromatic.rs  film_grain.rs  lens_flare.rs  motion_blur.rs  taa.rs  tonemap.rs
crates/gargantua-render/tests/: pipeline.rs
crates/gargantua-render/tests/fixtures/: broken.wgsl
crates/gargantua-ui/: Cargo.toml
crates/gargantua-ui/src/: errors.rs  lib.rs  shortcuts.rs  theme.rs
crates/gargantua-ui/src/accessibility/: keyboard_nav.rs  mod.rs
crates/gargantua-ui/src/hud/: animation.rs  layout.rs  mod.rs  toggle_button.rs  visibility.rs
crates/gargantua-ui/src/i18n/: en.toml  mod.rs  ru.toml  uz.toml
crates/gargantua-ui/src/menu/: mod.rs  search.rs
crates/gargantua-ui/src/menu/tabs/: bake_tab.rs  camera_tab.rs  export_tab.rs  physics_tab.rs  plugin_tab.rs  postfx_tab.rs  render_tab.rs
crates/gargantua-ui/src/overlay/: bake_progress.rs  camera_readout.rs  crosshair.rs  mod.rs  physics_readout.rs  render_progress.rs  stats_bar.rs
crates/gargantua-ui/src/presets/: builtin.rs  mod.rs  schema.rs  user.rs
crates/gargantua-ui/src/widgets/: codec_selector.rs  color_picker.rs  keyframe_editor.rs  mod.rs  progress.rs  slider_labeled.rs  toggle.rs  tooltip.rs
crates/gargantua-ui/tests/: search.rs
crates/gargantua-video/: Cargo.toml
crates/gargantua-video/src/: config.rs  errors.rs  lib.rs
crates/gargantua-video/src/color/: lut_3d.rs  mod.rs  transform.rs
crates/gargantua-video/src/denoise/: atrous.rs  coreml_ane.rs  mod.rs  oidn_cpu.rs  oidn_cuda.rs
crates/gargantua-video/src/encode/: mod.rs
crates/gargantua-video/src/encode/mac/: mod.rs  videotoolbox_av1.rs  videotoolbox_h264.rs  videotoolbox_h265.rs  videotoolbox_prores.rs
crates/gargantua-video/src/encode/universal/: exr_seq.rs  mod.rs  rav1e.rs  x264.rs  x265.rs
crates/gargantua-video/src/encode/windows/: amf_av1.rs  amf_h264.rs  amf_h265.rs  mod.rs  nvenc_av1.rs  nvenc_h264.rs  nvenc_h265.rs  qsv.h265.rs  qsv_av1.rs  qsv_h264.rs
crates/gargantua-video/src/offline/: accumulator.rs  mod.rs  motion_blur.rs  renderer.rs
crates/gargantua-video/src/realtime/: capturer.rs  mod.rs  webcodecs.rs
crates/gargantua-video/tests/: codec_support.rs  color_transform.rs
docs/: ai-guide.md  architecture.md  contributing.md  physics.md  platform.md
examples/: bake_only.rs  basic_kerr.rs  benchmark_geodesic.rs  camera_path.rs  custom_metric.rs  export_sequence.rs  headless_render.rs  photon_orbit.rs
shaders/compute/: accumulate.wgsl  geodesic_rk4.wgsl  ray_march.wgsl
shaders/postfx/: bloom_down.wgsl  bloom_up.wgsl  chromatic.wgsl  film_grain.wgsl  motion_blur.wgsl  taa.wgsl  tonemap.wgsl
shaders/render/: accretion_disk.wgsl  fullscreen.wgsl  lensing.wgsl  starfield.wgsl
tests/: bake_cache.rs  render_pipeline.rs
web/: index.html
(+44 files in other folders)
