[package]
name = "gargantua-core"
version = "0.1.0"
edition = "2021"
description = "GPU engine, frame graph, platform HAL"

[dependencies]
wgpu = { workspace = true }
winit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }

[features]
default = []
hot-reload = ["notify"]
wasm = []

[dependencies.notify]
workspace = true
optional = true
