[package]
name = "gargantua-ui"
version = "0.1.0"
edition = "2021"
description = "egui HUD, menus, widgets"

[dependencies]
gargantua-core = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
